# dcrpcgen

./: .gitignore  MANIFEST.in  README.md  pylama.ini  pyproject.toml
.github/workflows/: python-ci.yml
dcrpcgen/: __main__.py  main.py  utils.py
dcrpcgen/java/: __init__.py  types.py  utils.py
dcrpcgen/java/templates/: BaseTransport.java.j2  EnumTemplate.java.j2  ListenableFuture.java.j2  NormalClass.java.j2  Pair.java.j2  Rpc.java.j2  RpcException.java.j2  SettableFuture.java.j2  SuperClass.java.j2  __init__.py
